--- a/debian/rules
+++ b/debian/rules
@@ -4,7 +4,7 @@
 include /usr/share/dpkg/default.mk
 
 export DEB_BUILD_MAINT_OPTIONS = hardening=+all
-#export DEB_CFLAGS_MAINT_APPEND = -Werror
+export DEB_CFLAGS_MAINT_APPEND = -Werror
 
 export SOVER = 0
 export SONAME = libraft.so.$(SOVER)
