--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
-Source: raft
+Source: raft-canonical
 Section: devel
 Priority: optional
-Maintainer: Stéphane Graber <stgraber@ubuntu.com>
+Maintainer: Mathieu Borderé <mathieu.bordere@canonical.com>
 Build-Depends: debhelper (>= 10),
                pkg-config,
                liblz4-dev,
@@ -10,7 +10,7 @@ Homepage: https://github.com/canonical/raft
 Standards-Version: 4.5.1
 Rules-Requires-Root: no
 
-Package: libraft3
+Package: libraft3-canonical
 Section: libs
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
@@ -21,7 +21,7 @@ Description: C implementation of the Raft consensus protocol - library
  .
  This package contains the library itself.
 
-Package: libraft-dev
+Package: libraft-canonical-dev
 Section: libdevel
 Architecture: any
 Depends: libraft3 (= ${binary:Version}), ${misc:Depends}
