--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: go-dqlite
 Section: devel
 Priority: optional
-Maintainer: Stéphane Graber <stgraber@ubuntu.com>
+Maintainer: Mathieu Borderé <mathieu.bordere@canonical.com>
 Build-Depends: debhelper (>= 10),
                dh-golang,
                golang-go,
