Add Conflicts: to packages
Signed-off-by: Cole Miller <cole.miller@canonical.com>

--- a/debian/control
+++ b/debian/control
@@ -16,6 +16,7 @@ Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
+Conflicts: libraft3
 Description: C implementation of the Raft consensus protocol - library
  libraft is a simple implement of the Raft consensus protocol in C.
  .
@@ -26,6 +27,7 @@ Section: libdevel
 Architecture: any
 Depends: libraft3 (= ${binary:Version}), ${misc:Depends}
 Multi-Arch: same
+Conflicts: libraft-dev
 Description: C implementation of the Raft consensus protocol - headers
  libraft is a simple implement of the Raft consensus protocol in C.
  .
