--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: dqlite
 Section: devel
 Priority: optional
-Maintainer: Mathieu Borderé <mathieu.bordere@canonical.com>
+Maintainer: Cole Miller <cole.miller@canonical.com>
 Build-Depends: debhelper (>= 10),
                pkg-config,
                libsqlite3-dev,
