Depend on pkgconf instead of pkg-config
Signed-off-by: Cole Miller <cole.miller@canonical.com>

--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: devel
 Priority: optional
 Maintainer: Cole Miller <cole.miller@canonical.com>
 Build-Depends: debhelper (>= 10),
-               pkg-config,
+               pkgconf,
                libsqlite3-dev,
                libuv1-dev
 Homepage: https://github.com/canonical/dqlite
