--- a/debian/control
+++ b/debian/control
@@ -1,12 +1,12 @@
-Source: go-dqlite
+Source: go-dqlite-v2
 Section: devel
 Priority: optional
-Maintainer: Mathieu Borderé <mathieu.bordere@canonical.com>
+Maintainer: Cole Miller <cole.miller@canonical.com>
 Build-Depends: debhelper (>= 10),
                dh-golang,
                golang-go,
                pkg-config,
-               libdqlite-dev
+               libdqlite1.17-dev
 Homepage: https://github.com/canonical/go-dqlite
 Standards-Version: 4.5.1
 Rules-Requires-Root: no
@@ -22,7 +22,7 @@ Description: Distributed sqlite database using Raft - tools
  .
  This package contains some benchmarking and demo tools.
 
-Package: golang-canonical-go-dqlite-dev
+Package: golang-canonical-go-dqlite-v2-dev
 Architecture: all
 Depends: libdqlite-dev,
          ${misc:Depends},
