--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Build-Depends: debhelper (>= 10),
                dh-golang,
                golang-go,
                pkg-config,
-               libdqlite1.17-dev
+               libdqlite-dev
 Homepage: https://github.com/canonical/go-dqlite
 Standards-Version: 4.5.1
 Rules-Requires-Root: no
